--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -153,6 +153,7 @@
         "@types/react-dom": "16.9.10",
         "@types/react-router-dom": "5.1.7",
         "@types/react-tabs": "2.3.2",
+        "@types/react-tooltip": "3.11.0",
         "@types/react-transition-group": "4.4.1",
         "@types/socket.io-client": "1.4.35",
         "@types/ua-parser-js": "0.7.35",
@@ -268,6 +269,7 @@
         "react-syntax-highlighter": "15.4.3",
         "react-tabs": "3.2.0",
         "react-test-renderer": "16.14.0",
+        "react-tooltip": "4.2.17",
         "remark-frontmatter": "2.0.0",
         "reset-css": "5.0.1",
         "resolve-from": "5.0.0",
@@ -293,6 +295,7 @@
         "url-loader": "4.1.1",
         "url-parse": "1.4.7",
         "use-animation-frame": "0.1.0",
+        "uuid": "8.3.2",
         "vfile": "4.2.0",
         "vscode-icons-js": "11.0.0",
         "vscode-languageclient": "6.1.3",
