--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1288,8 +1288,8 @@ workflows:
 
   nightly:
     triggers:
-      - schedule: # every day at 6AM UTC (= 1AM EST)
-          cron: '0 6 * * *'
+      - schedule: # every day at 3AM UTC (= 10PM EST)
+          cron: '0 3 * * *'
           filters:
             branches:
               only:
