--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1051,6 +1051,57 @@ jobs:
           paths:
             - version.txt
 
+  windows_build_bvm:
+    <<: *windows_defaults
+    environment:
+      BITSRC_ENV: stg
+      SKIP_REGISTRY_TESTS: true
+      SKIP_BIT_DEV_TESTS: true
+    parallelism: 1
+    steps:
+      - attach_workspace:
+          at: .
+      - run: cinst nodejs --version 12.15.0
+      - run: node -v
+      - run: npm -v
+      # - run: Get-Content -Path .\version.txt
+      # - restore_cache:
+      #     key: bvm-folder-v1
+      - restore_cache:
+          key: v1-bvm-folder-{{ checksum "version.txt" }}
+      # - run: bit -v
+      - run: 'setx path "%path%;C:\Users\circleci\AppData\Local\.bvm"'
+      - run: bit -v
+      # - run: 'npm i -g @teambit/bvm'
+      # - run: 'bvm list'
+      # - run: 'bvm link'
+      # - run: bit -v
+      - run:
+          name: 'save SHA to a file'
+          command: 'echo $CIRCLE_SHA1 > .circle-sha'
+      - restore_cache:
+          key: windows_bitsrc-ssh-key-v1
+      - restore_cache:
+          key: windows_bitsrc-registry-v1
+          # key: windows_bitsrc-registry-stg-v2
+      # -
+      #   restore_cache:
+      #     keys:
+      #       - 'builded-{{ checksum ".circle-sha" }}'
+      # -
+      # add the id_rsa to ssh_agent to make sure we authenticate with the correct user
+      #   run: 'chmod 400 ~/.ssh/id_rsa'
+      # -
+      #   run: 'ssh-add ~/.ssh/id_rsa'
+      - bit_config:
+          token: "fake-token"
+      - run: 'cd bit\bit; bit install'
+      - run: 'cd bit\bit; bit compile'
+      - run: 'cd bit\bit; npm run build'
+      - persist_to_workspace:
+          root: .
+          paths:
+            - bit
   windows_e2e_test_bvm:
     <<: *windows_defaults
     environment:
@@ -1100,9 +1151,6 @@ jobs:
           name: 'write e2e files'
           command: 'cd bit\bit; circleci tests glob "e2e\*\*.e2e*.ts" | circleci tests split --split-by=filesize | Out-File -FilePath .\spec-files.txt'
       - run: Get-Content -Path .\bit\bit\spec-files.txt
-      - run: 'cd bit\bit; bit install'
-      - run: 'cd bit\bit; bit compile'
-      - run: 'cd bit\bit; npm run build'
       - run: 'cd bit\bit; cmd /c rmdir /s /q .\node_modules\@teambit\legacy; New-Item -Path node_modules\@teambit\legacy -ItemType SymbolicLink -Value .'
       - run:
           name: 'run e2e tests'
@@ -1436,22 +1484,30 @@ workflows:
       - windows_checkout_code
       - windows_set_ssh_key
       - windows_bvm_install
+      - windows_build_bvm:
+          requires:
+            - windows_bvm_install
       - windows_e2e_test_bvm:
           requires:
             - windows_checkout_code
             - windows_set_ssh_key
             - windows_bvm_install
+            - windows_build_bvm
 
   build_and_test_windows:
     jobs:
       - windows_set_ssh_key
       - windows_checkout_code
       - windows_bvm_install
+      - windows_build_bvm:
+          requires:
+            - windows_bvm_install
       - windows_e2e_test_bvm:
           requires:
             - windows_checkout_code
             - windows_set_ssh_key
             - windows_bvm_install
+            - windows_build_bvm
   # TODO: check if we can combine it with the regular nightly somehow
   harmony_deploy:
     jobs:
