--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -154,7 +154,6 @@
         "@types/react-router-dom": "5.1.7",
         "@types/react-tabs": "2.3.2",
         "@types/react-tooltip": "3.11.0",
-        "@types/react-transition-group": "4.4.1",
         "@types/socket.io-client": "1.4.35",
         "@types/ua-parser-js": "0.7.35",
         "@types/url-parse": "1.4.3",
@@ -185,7 +184,6 @@
         "cli-highlight": "2.1.9",
         "comlink": "4.3.0",
         "copy-to-clipboard": "3.3.1",
-        "core-js": "3.8.3",
         "cors": "2.8.5",
         "credentials-by-uri": "2.0.0",
         "cross-fetch": "3.0.6",
@@ -255,16 +253,12 @@
         "postcss-preset-env": "6.7.0",
         "postcss-safe-parser": "4.0.2",
         "pretty-time": "1.1.0",
-        "prism-react-renderer": "1.2.0",
         "proper-lockfile": "4.1.2",
         "query-string": "7.0.0",
         "react-animate-height": "2.0.23",
         "react-dev-utils": "10.2.1",
-        "react-dom": "16.14.0",
         "react-error-overlay": "6.0.9",
         "react-flow-renderer": "8.3.7",
-        "react-hot-loader": "4.13.0",
-        "react-live": "2.2.3",
         "react-popper": "2.2.4",
         "react-router-dom": "5.2.0",
         "react-syntax-highlighter": "15.4.3",
@@ -317,7 +311,8 @@
         "graphql": "14.7.0",
         "mz": "2.7.0",
         "react": "16.13.1",
-        "react-dom": "16.13.1"
+        "react-dom": "16.13.1",
+        "core-js": "3.10.0"
       }
     },
     "packageManagerArgs": [],
@@ -365,18 +360,14 @@
       "teambit.dependencies/dependency-resolver": {
         "policy": {
           "dependencies": {
-            "@teambit/legacy": "-",
-            // TODO: remove this later
-            "core-js": "3.8.3"
+            "@teambit/legacy": "-"
           },
           "devDependencies": {
             "@types/mocha": "5.2.7",
             "@teambit/legacy": "-"
           },
           "peerDependencies": {
-            "react": "16.13.1",
-            "@teambit/legacy": "1.0.48",
-            "react-dom": "16.13.1"
+            "@teambit/legacy": "1.0.48"
           }
         }
       },
@@ -500,6 +491,7 @@
     "scopes/semantics": {
       "defaultScope": "teambit.semantics"
     },
+    // overrides for @teambit/bit ("teambit.harmony/bit") package:
     "scopes/harmony/bit": {
       "teambit.pkg/pkg": {
         "packageJson": {
@@ -518,10 +510,6 @@
         "policy": {
           "dependencies": {
             "@teambit/legacy": "1.0.48",
-            // TODO: remove this later
-            "core-js": "3.8.3",
-            "react": "16.13.1",
-            "react-dom": "16.13.1",
             "graphql": "14.7.0",
             "browserslist": "4.16.3",
             "reflect-metadata": "0.1.13",
@@ -531,7 +519,7 @@
             "graceful-fs": "4.2.4"
           },
           "devDependencies": {
-            "@types/react": "16.14.4",
+            "@types/react": "-",
             "@types/mocha": "5.2.7",
             // why this is needed? try to automate this
             "@types/node": "12.20.4"
