--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -516,20 +516,25 @@
             "mz": "2.7.0",
             "react-refresh": "0.9.0",
             // TODO: remove this once this is merged https://github.com/isaacs/node-graceful-fs/pull/202
-            "graceful-fs": "4.2.4"
+            "graceful-fs": "4.2.4",
+            // make sure the package manager installs an instance of react (and other peers)
+            "react": "16.14.0",
+            "react-dom": "16.14.2",
+            "core-js": "3.10.0"
           },
           "devDependencies": {
-            "@types/react": "-",
-            "@types/mocha": "5.2.7",
-            // why this is needed? try to automate this
-            "@types/node": "12.20.4"
+            // "@types/react": "-",
+            // "@types/mocha": "5.2.7",
+            // // why this is needed? try to automate this
+            // "@types/node": "12.20.4"
           },
           "peerDependencies": {
             "@teambit/legacy": "-",
             "browserslist": "-",
             "graphql": "-",
             "react": "-",
-            "react-dom": "-"
+            "react-dom": "-",
+            "core-js": "-",
           }
         }
       }
