--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -299,7 +299,7 @@
         "vscode-ws-jsonrpc": "0.2.0",
         "webpack": "5.30.0",
         "webpack-dev-middleware": "4.1.0",
-        "webpack-dev-server": "^4.0.0-beta.0",
+        "webpack-dev-server": "4.0.0-beta.2",
         "webpack-hot-middleware": "2.25.0",
         "webpack-manifest-plugin": "3.1.0",
         "webpack-merge": "5.7.3",
@@ -318,23 +318,17 @@
       }
     },
     "packageManagerArgs": [],
-    "devFilePatterns": [
-      "**/*.spec.ts"
-    ],
+    "devFilePatterns": ["**/*.spec.ts"],
     "strictPeerDependencies": true,
     "extraArgs": []
   },
   "teambit.generator/generator": {
-    "aspects": [
-      "teambit.harmony/aspect"
-    ]
+    "aspects": ["teambit.harmony/aspect"]
   },
   "teambit.workspace/variants": {
     "*": {
       "teambit.pkg/pkg": {
-        "packageManagerPublishArgs": [
-          "--access public"
-        ],
+        "packageManagerPublishArgs": ["--access public"],
         "packageJson": {
           "name": "@teambit/{name}",
           "private": false,
@@ -497,9 +491,7 @@
     "scopes/harmony/bit": {
       "teambit.pkg/pkg": {
         "packageJson": {
-          "packageManagerPublishArgs": [
-            "--access public"
-          ],
+          "packageManagerPublishArgs": ["--access public"],
           "name": "@teambit/{name}", // @teambit/discovery.ui.sidebar
           "private": false,
           // Change back to "bin": "bin/bit" once released to prod
