one more attempt

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -664,6 +664,7 @@ jobs:
       - run: rm -rf /usr/local/bin/yarn
       - run: rm -rf /usr/local/bin/yarnpkg
       - run: npm install --global yarn --force
+      - run: yarn cache clean
       - run: yarn -v
       - run:
           name: print bit version
