--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -479,7 +479,18 @@
       "defaultScope": "teambit.mdx"
     },
     "scopes/design": {
-      "defaultScope": "teambit.design"
+      "defaultScope": "teambit.design",
+      "teambit.envs/envs": {
+        "env": "teambit.react/react"
+      },
+      "teambit.dependencies/dependency-resolver": {
+        "policy": {
+          "devDependencies": {
+            // TODO - remove when @teambit/legacy is applied only to aspects
+            "@teambit/legacy": "-"
+          }
+        }
+      }
     },
     "scopes/typescript": {
       "defaultScope": "teambit.typescript"
