--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -160,11 +160,11 @@
         "@types/webpack": "4.41.25",
         "@types/webpack-dev-server": "3.11.1",
         "@types/webpack-merge": "4.1.5",
-        "@yarnpkg/cli": "2.4.0",
-        "@yarnpkg/core": "2.4.0",
-        "@yarnpkg/fslib": "2.4.0",
-        "@yarnpkg/plugin-npm": "2.4.0",
-        "@yarnpkg/plugin-pack": "2.2.3",
+        "@yarnpkg/cli": "3.0.0-rc.2",
+        "@yarnpkg/core": "3.0.0-rc.2",
+        "@yarnpkg/fslib": "2.5.0-rc.2",
+        "@yarnpkg/plugin-npm": "2.5.0-rc.2",
+        "@yarnpkg/plugin-pack": "3.0.0-rc.2",
         "agentkeepalive": "4.1.4",
         "ansi-to-html": "0.6.14",
         "apollo-link-context": "1.0.20",
