--- a/scopes/react/react/typescript/tsconfig.build.json
+++ b/scopes/react/react/typescript/tsconfig.build.json
@@ -6,6 +6,7 @@
     "target": "es2015",
     "module": "commonjs",
     "jsx": "react",
+    "allowJs": true,
     "composite": true,
     "declaration": true,
     "sourceMap": true,
