add allowSyntheticDefaultImports for aspect env tsconfig

--- a/scopes/harmony/aspect/typescript/tsconfig.json
+++ b/scopes/harmony/aspect/typescript/tsconfig.json
@@ -15,6 +15,7 @@
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "allowSyntheticDefaultImports": true,
     "strictPropertyInitialization": false,
     "strict": true,
     "moduleResolution": "node",
