update build-harmony to use the latest versoin of teambit/bit

--- a/build-harmony/package.json
+++ b/build-harmony/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@teambit/bit": "0.0.367"
+    "@teambit/bit": "*"
   },
   "resolutions": {
     "@teambit/bit/core-js": "3.8.3"
