add Angular aspect & templates generation

--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -437,6 +437,9 @@
     "scopes/react": {
       "defaultScope": "teambit.react"
     },
+    "scopes/angular": {
+      "defaultScope": "teambit.angular"
+    },
     "scopes/preview": {
       "defaultScope": "teambit.preview"
     },
