--- a/package.json
+++ b/package.json
@@ -179,6 +179,7 @@
     "module-definition": "3.3.1",
     "module-lookup-amd": "6.2.0",
     "moment": "2.29.1",
+    "node-cache": "5.1.2",
     "node-fetch": "2.6.1",
     "node-source-walk": "4.2.0",
     "normalize-path": "2.1.1",
