--- a/package.json
+++ b/package.json
@@ -172,6 +172,7 @@
     "lodash.set": "4.3.2",
     "lodash.toarray": "4.4.0",
     "lodash.unionby": "4.8.0",
+    "lru-cache": "6.0.0",
     "make-fetch-happen": "4.0.2",
     "memfs": "2.17.1",
     "minimatch": "3.0.4",
@@ -201,7 +202,6 @@
     "pino-pretty": "4.5.0",
     "porter-stemmer": "0.9.1",
     "prompt": "1.1.0",
-    "quick-lru": "6.0.0",
     "ramda": "0.27.1",
     "ramda-adjunct": "2.31.1",
     "react-docgen": "5.3.1",
