Full setup is working on Windows

--- a/package.json
+++ b/package.json
@@ -81,14 +81,17 @@
     "clean": "rm -rf dist && rm -rf types",
     "build": "npm run build:src",
     "build:types": "./scripts/build-types.bash",
+    "build:types:windows": ".\\scripts\\build-types.bat",
     "install-harmony": "cd build-harmony && yarn",
     "link-bit-legacy": "node ./scripts/link-bit-legacy.js",
     "import-harmony": "build-harmony/node_modules/.bin/bbit import",
     "status-harmony": "build-harmony/node_modules/.bin/bbit status",
     "build-harmony": "build-harmony/node_modules/.bin/bbit install && npm run link-bit-legacy && build-harmony/node_modules/.bin/bbit compile",
+    "build-harmony:windows": "build-harmony\\node_modules\\.bin\\bbit.cmd install && npm run link-bit-legacy && build-harmony\\node_modules\\.bin\\bbit.cmd compile",
     "build-harmony-skip-import": "build-harmony/node_modules/.bin/bbit install --skip-import && npm run link-bit-legacy && build-harmony/node_modules/.bin/bbit compile",
     "link-harmony": "build-harmony/node_modules/.bin/bbit link",
     "full-setup": "npm run install-harmony && npm run build-harmony && npm run build && npm run build:types",
+    "full-setup:windows": "npm run install-harmony && npm run build-harmony:windows && npm run build && npm run build:types:windows",
     "full-setup:bbit": "rm -rf node_modules/@teambit/legacy && bbit install && npm run link-bit-legacy && bbit compile && npm run build && npm run build:types",
     "build-centos-image": "docker build ./scripts/linux/centos -t centos-rpm",
     "build-debian-image": "docker build ./scripts/linux/debian -t debian-deb",
