--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1435,7 +1435,7 @@ workflows:
 
   nightly:
     triggers:
-      - schedule: # every day at 3AM UTC (= 10PM EST)
+      - schedule: # every day at 3AM UTC (= 11PM EST = 6AM IST)
           cron: '0 3 * * *'
           filters:
             branches:
@@ -1481,8 +1481,8 @@ workflows:
 
   windows-nightly:
     triggers:
-      - schedule: # every day at 4AM UTC (= 1AM EST)
-          cron: '0 4 * * *'
+      - schedule: # every day at 5AM UTC (= 1AM EST = 8AM IST)
+          cron: '0 5 * * *'
           filters:
             branches:
               only:
@@ -1491,34 +1491,39 @@ workflows:
       - windows_checkout_code
       - windows_set_ssh_key
       - windows_bvm_install:
+          <<: *master_only_filter
           requires:
             - windows_checkout_code
       - windows_build_bvm:
+          <<: *master_only_filter
           requires:
             - windows_bvm_install
       - windows_e2e_test_bvm:
+          <<: *master_only_filter
           requires:
             - windows_checkout_code
             - windows_set_ssh_key
             - windows_bvm_install
             - windows_build_bvm
 
-  build_and_test_windows:
-    jobs:
-      - windows_set_ssh_key
-      - windows_checkout_code
-      - windows_bvm_install:
-          requires:
-            - windows_checkout_code
-      - windows_build_bvm:
-          requires:
-            - windows_bvm_install
-      - windows_e2e_test_bvm:
-          requires:
-            - windows_checkout_code
-            - windows_set_ssh_key
-            - windows_bvm_install
-            - windows_build_bvm
+  # Uncomment in cse you want to run the windows tests
+  # build_and_test_windows:
+  #   jobs:
+  #     - windows_set_ssh_key
+  #     - windows_checkout_code
+  #     - windows_bvm_install:
+  #         requires:
+  #           - windows_checkout_code
+  #     - windows_build_bvm:
+  #         requires:
+  #           - windows_bvm_install
+  #     - windows_e2e_test_bvm:
+  #         requires:
+  #           - windows_checkout_code
+  #           - windows_set_ssh_key
+  #           - windows_bvm_install
+  #           - windows_build_bvm
+
   # TODO: check if we can combine it with the regular nightly somehow
   harmony_deploy:
     jobs:
