--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -571,7 +571,8 @@ jobs:
           name: tag persist
           # command: cd bit && bit tag --all --ignore-newest-version
           # command: cd bit && bit tag --scope 0.0.297
-          command: cd bit && bit tag --all --increment-by 2
+          # command: cd bit && bit tag --all --increment-by 2
+          command: cd bit && bit tag --all
           # command: cd bit && bit tag --persist --ignore-newest-version
           no_output_timeout: '25m'
           environment:
@@ -783,6 +784,7 @@ jobs:
       - bit_global_for_npm
       - bit_config:
           env: "hub"
+      - run: 'bit config set user.token <<parameters.token>>'
       - restore_cache:
           key: bitsrc-ssh-key3
       - restore_cache:
@@ -839,8 +841,8 @@ jobs:
       - restore_cache:
           key: bitsrc-registry8
       - # add the id_rsa to ssh_agent to make sure we authenticate with the correct user
-        run: 'chmod 400 ~/.ssh/id_rsa'
-      - run: 'ssh-add ~/.ssh/id_rsa'
+      #   run: 'chmod 400 ~/.ssh/id_rsa'
+      # - run: 'ssh-add ~/.ssh/id_rsa'
       - run: 'cd bit && mkdir junit'
       - run: 'bit config set package-manager.cache /home/circleci/package-manager-cache'
       # Make sure when we run bit from e2e tests we run it from the global not from here
