add user-token to export command, remove ssh-add from build_and_test workflow, revert bit-tag workflow (#4234)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -571,7 +571,8 @@ jobs:
           name: tag persist
           # command: cd bit && bit tag --all --ignore-newest-version
           # command: cd bit && bit tag --scope 0.0.297
-          command: cd bit && bit tag --all --increment-by 2
+          # command: cd bit && bit tag --all --increment-by 2
+          command: cd bit && bit tag --all
           # command: cd bit && bit tag --persist --ignore-newest-version
           no_output_timeout: '25m'
           environment:
@@ -789,8 +790,7 @@ jobs:
           key: bitsrc-registry8
       - update_ssh_agent
       - set_git_credentials
-      # temporarily to understand the issue with the "EMFILE, too many open files" error.
-      - run: ulimit -a
+      - run: bit config set user.token ${BIT_DEV_PROD_TOKEN}
       - run:
           name: export components
           command: cd bit && BIT_FEATURES=export-central bit export
@@ -838,9 +838,9 @@ jobs:
           key: bitsrc-ssh-key3
       - restore_cache:
           key: bitsrc-registry8
-      - # add the id_rsa to ssh_agent to make sure we authenticate with the correct user
-        run: 'chmod 400 ~/.ssh/id_rsa'
-      - run: 'ssh-add ~/.ssh/id_rsa'
+      # add the id_rsa to ssh_agent to make sure we authenticate with the correct user
+      # - run: 'chmod 400 ~/.ssh/id_rsa'
+      # - run: 'ssh-add ~/.ssh/id_rsa'
       - run: 'cd bit && mkdir junit'
       - run: 'bit config set package-manager.cache /home/circleci/package-manager-cache'
       # Make sure when we run bit from e2e tests we run it from the global not from here
