feat: add mdx files

--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -81,6 +81,7 @@
         "@teambit/base-ui.utils.sub-paths": "0.6.3",
         "@teambit/base-ui.utils.time-ago": "0.5.9",
         "@teambit/capsule": "0.0.12",
+        "@teambit/component.instructions.exporting-components": "0.0.1",
         "@teambit/documenter.code.react-playground": "1.0.4",
         "@teambit/documenter.routing.external-link": "1.0.3",
         "@teambit/documenter.theme.theme-compositions": "3.0.8",
@@ -120,6 +121,8 @@
         "@teambit/evangelist.surfaces.tooltip": "0.5.4",
         "@teambit/evangelist.theme.icon-font": "0.5.5",
         "@teambit/harmony": "0.2.11",
+        "@teambit/react.instructions.react.adding-compositions": "0.0.1",
+        "@teambit/react.instructions.react.adding-tests": "0.0.1",
         "@teambit/string.ellipsis": "0.0.7",
         "@teambit/ui.composition-card": "0.0.259",
         "@testing-library/jest-dom": "5.11.10",
