--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -156,6 +156,7 @@
         "@types/react-tooltip": "3.11.0",
         "@types/socket.io-client": "1.4.35",
         "@types/ua-parser-js": "0.7.35",
+        "@types/url-join": "4.0.0",
         "@types/url-parse": "1.4.3",
         "@types/webpack": "4.41.25",
         "@types/webpack-dev-server": "3.11.1",
@@ -289,6 +290,7 @@
         "ua-parser-js": "0.7.24",
         "unist-util-remove": "2.0.1",
         "unist-util-visit": "2.0.3",
+        "url-join": "4.0.1",
         "url-loader": "4.1.1",
         "url-parse": "1.4.7",
         "use-animation-frame": "0.1.0",
