--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -649,6 +649,7 @@
             "string_decoder": "1.3.0",
             "timers-browserify": "2.0.12",
             "tty-browserify": "0.0.1",
+            "url": "0.11.0",
             "util": "0.12.3",
             "vm-browserify": "1.1.2"
           }
