--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -59,6 +59,11 @@
         "@teambit/base-ui.layout.grid-component": "0.6.11",
         "@teambit/base-ui.layout.page-frame": "0.6.10",
         "@teambit/base-ui.loaders.loader-ribbon": "0.6.11",
+        "@teambit/base-ui.routing.link": "0.0.1",
+        "@teambit/base-ui.routing.native-link": "0.0.1",
+        "@teambit/base-ui.routing.native-nav-link": "0.0.1",
+        "@teambit/base-ui.routing.nav-link": "0.0.1",
+        "@teambit/base-ui.routing.routing-provider": "0.0.1",
         "@teambit/base-ui.surfaces.card": "0.6.13",
         "@teambit/base-ui.surfaces.split-pane.hover-splitter": "0.7.4",
         "@teambit/base-ui.surfaces.split-pane.split-pane": "0.6.11",
