--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -85,6 +85,7 @@
         "@teambit/base-ui.utils.sub-paths": "0.6.10",
         "@teambit/base-ui.utils.time-ago": "0.6.10",
         "@teambit/capsule": "0.0.12",
+        "@teambit/component.instructions.exporting-components": "0.0.3",
         "@teambit/documenter.code.react-playground": "3.0.11",
         "@teambit/documenter.routing.external-link": "3.0.11",
         "@teambit/documenter.theme.theme-compositions": "3.0.11",
@@ -123,6 +124,8 @@
         "@teambit/evangelist.surfaces.dropdown": "0.5.41",
         "@teambit/evangelist.surfaces.tooltip": "0.5.41",
         "@teambit/harmony": "0.2.11",
+        "@teambit/react.instructions.react.adding-compositions": "0.0.3",
+        "@teambit/react.instructions.react.adding-tests": "0.0.3",
         "@teambit/string.ellipsis": "0.0.7",
         "@teambit/ui.composition-card": "0.0.259",
         "@testing-library/jest-dom": "5.11.10",
@@ -325,24 +328,18 @@
       }
     },
     "packageManagerArgs": [],
-    "devFilePatterns": [
-      "**/*.spec.ts"
-    ],
+    "devFilePatterns": ["**/*.spec.ts"],
     "strictPeerDependencies": true,
     "extraArgs": []
   },
   "teambit.generator/generator": {
-    "aspects": [
-      "teambit.harmony/aspect"
-    ]
+    "aspects": ["teambit.harmony/aspect"]
   },
   "teambit.workspace/variants": {
     // Only component with no namespace (aka aspects in our workspace)
     "*,!{*/**}": {
       "teambit.pkg/pkg": {
-        "packageManagerPublishArgs": [
-          "--access public"
-        ],
+        "packageManagerPublishArgs": ["--access public"],
         "packageJson": {
           "name": "@teambit/{name}",
           "private": false,
@@ -390,9 +387,7 @@
     // Only component with at least one namespace
     "{*/**}": {
       "teambit.pkg/pkg": {
-        "packageManagerPublishArgs": [
-          "--access public"
-        ],
+        "packageManagerPublishArgs": ["--access public"],
         "packageJson": {
           "name": "@teambit/{name}",
           "private": false,
@@ -575,9 +570,7 @@
     "scopes/harmony/bit": {
       "teambit.pkg/pkg": {
         "packageJson": {
-          "packageManagerPublishArgs": [
-            "--access public"
-          ],
+          "packageManagerPublishArgs": ["--access public"],
           "name": "@teambit/{name}", // @teambit/discovery.ui.sidebar
           "private": false,
           // Change back to "bin": "bin/bit" once released to prod
