--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -397,7 +397,7 @@
           "--access public"
         ],
         "packageJson": {
-          "name": "@teambit/{name}",
+          "name": "@teambit/{scope}.{name}",
           "private": false,
           "engines": {
             "node": ">=12.15.0"
