--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1433,51 +1433,51 @@ workflows:
             - set_npm_registries
             - build
 
-  # nightly:
-  #   triggers:
-  #     - schedule: # every day at 3AM UTC (= 11PM EST = 6AM IST)
-  #         cron: '0 3 * * *'
-  #         filters:
-  #           branches:
-  #             only:
-  #               - master
-  #   jobs:
-  #     - checkout_code
-  #     - set_ssh_key
-  #     - set_npm_registries
-  #     - setup_harmony:
-  #         requires:
-  #           - set_npm_registries
-  #           - checkout_code
-  #     - bit_tag:
-  #         <<: *master_only_filter
-  #         requires:
-  #           - setup_harmony
-  #     - bundle_version_linux:
-  #         <<: *master_only_filter
-  #         requires:
-  #           - bit_tag
-  #     - bundle_version_windows:
-  #         <<: *master_only_filter
-  #         requires:
-  #           - bit_tag
-  #     - bundle_version_macos:
-  #         <<: *master_only_filter
-  #         requires:
-  #           - bit_tag
-  #     - harmony_publish_to_gcloud:
-  #         <<: *master_only_filter
-  #         requires:
-  #           - bundle_version_linux
-  #           - bundle_version_windows
-  #           - bundle_version_macos
-  #     - bit_export:
-  #         <<: *master_only_filter
-  #         requires:
-  #           - bit_tag
-  #     - docker_build:
-  #         requires:
-  #           - bit_tag
+  nightly:
+    triggers:
+      - schedule: # every day at 3AM UTC (= 11PM EST = 6AM IST)
+          cron: '0 3 * * *'
+          filters:
+            branches:
+              only:
+                - master
+    jobs:
+      - checkout_code
+      - set_ssh_key
+      - set_npm_registries
+      - setup_harmony:
+          requires:
+            - set_npm_registries
+            - checkout_code
+      - bit_tag:
+          <<: *master_only_filter
+          requires:
+            - setup_harmony
+      - bundle_version_linux:
+          <<: *master_only_filter
+          requires:
+            - bit_tag
+      - bundle_version_windows:
+          <<: *master_only_filter
+          requires:
+            - bit_tag
+      - bundle_version_macos:
+          <<: *master_only_filter
+          requires:
+            - bit_tag
+      - harmony_publish_to_gcloud:
+          <<: *master_only_filter
+          requires:
+            - bundle_version_linux
+            - bundle_version_windows
+            - bundle_version_macos
+      - bit_export:
+          <<: *master_only_filter
+          requires:
+            - bit_tag
+      - docker_build:
+          requires:
+            - bit_tag
 
   windows-nightly:
     triggers:
