--- a/package.json
+++ b/package.json
@@ -137,7 +137,6 @@
     "checksum": "0.1.1",
     "chokidar": "3.5.1",
     "cli-spinners": "1.3.1",
-    "commander": "2.20.3",
     "comment-json": "3.0.3",
     "core-js": "3.9.0",
     "css-tree": "1.1.2",
@@ -238,6 +237,7 @@
     "vinyl-file": "3.0.0",
     "vue-template-compiler": "2.6.12",
     "winston": "3.3.3",
+    "yargs": "17.0.1",
     "yn": "2.0.0"
   },
   "devDependencies": {
@@ -268,6 +268,7 @@
     "@types/sass": "1.16.0",
     "@types/semver": "7.3.4",
     "@types/uuid": "3.4.9",
+    "@types/yargs": "17.0.0",
     "@typescript-eslint/eslint-plugin": "4.15.1",
     "@typescript-eslint/parser": "4.15.1",
     "@typescript-eslint/typescript-estree": "4.15.1",
